# cpuex2022-7-simulator

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: interactive.rs  main.rs
core_sim/: Cargo.toml  build.rs
core_sim/src/: bin.rs  branch_predictor.rs  breakpoint.rs  cache.rs  common.rs  cpu.rs  debug_symbol.rs  decode_instr.rs  decode_instr_2nd.rs  fpu_wrapper.rs  instr.rs  io.rs  lib.rs  memory.rs  ppm.rs  reg_file.rs  register.rs  sim.rs  sld.rs  stat.rs  ty.rs
fpu/: Makefile  README.md  test_all.c  wrapper.h
fpu/impl/: fcvtsw.c  fcvtsw.h  fcvtws.c  fcvtws.h  fdiv.c  fdiv.h  ffloor.c  ffloor.h  fmul.c  fmul.h  fpulib.c  fpulib.h  fsqrt.c  fsqrt.h
fpu/test/: fcvtsw.c  fcvtsw.h  fcvtws.c  fcvtws.h  fdiv.c  fdiv.h  ffloor.c  ffloor.h  fmul.c  fmul.h  fsqrt.c  fsqrt.h
