[workspace]
members = [
  "cli",
  "core_sim",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
core_sim.path = "./core_sim"
anyhow = "1.0.65"
thiserror = "1.0.37"
once_cell = "1.16.0"
log = "0.4.17"
env_logger = "0.10.0"
clap.version = "4.4.1"
clap.features = ["derive"]
nom = "7.1.1"
peg = "0.8.1"
serde.version = "1.0.188"
serde.features = ["derive"]
serde_json = "1.0"
terminal_size = "0.2.3"
bitmask-enum = "2.1.0"
num_enum = "0.7.0"
bindgen = "0.66.1"
cc = "1.0.46"
glob = "0.3.1"
cfg-if = "1.0"
