[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[features]
default = ["stat"]
stat = ["core_sim/stat"]

[dependencies]
core_sim.workspace = true
clap.workspace = true
anyhow.workspace = true
env_logger.workspace = true
peg.workspace = true
log.workspace = true
terminal_size.workspace = true
bitmask-enum.workspace = true
